--- a/clientAdmin.html
+++ b/clientAdmin.html
@@ -28,8 +28,8 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		  <li class="nav-item">
+			<a class="nav-link" href="#">Home</a>
 		  </li>
 		  <li class="nav-item">
 			<a class="nav-link" href="#">Room Details</a>
@@ -37,48 +37,39 @@
 		  <li class="nav-item">
 			<a class="nav-link" href="#">Employee Details</a>
 		  </li>
-		  <li class="nav-item">
+		  <li class="nav-item active">
 			<a class="nav-link" href="#">Client Details</a>
 		  </li>
 		</ul>
 	  </div>
 	</nav>
 	
-	<img src="images/1.jpg" class="img-fluid" alt="Responsive image">
+	
+	
 	
 	<br><br>
+	<!-- client details table-->
 	
+	<table class="table">
+	  <thead>
+		<tr>
+		  <th scope="col">Email</th>
+		  <th scope="col">Name</th>
+		  <th scope="col">Phone Number</th>
+		  <th scope="col">Date Of Birth</th>
+		</tr>
+	  </thead>
+	  <tbody>
+		<tr>
+		  <th scope="row">c.sadaaf@gmail.com</th>
+		  <td>Sadaaf</td>
+		  <td>23232343</td>
+		  <td>1997-12-13</td>
+		</tr>
+		
+	  </tbody>
+	</table>
 	
-	<div class="card-group">
-	  <div class="card">
-		<img class="card-img-top" src="images/roomavailable.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Roooms available today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/roombooked.jpg" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of rooms booked today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/userIcon.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of customers</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/employee.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of employees</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	</div>
 	<br>
 	<footer>
 	  <p>Five Seasons<br>
