--- a/findUsCustomer.html
+++ b/findUsCustomer.html
@@ -22,64 +22,31 @@
     
 	
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Four Seasons Admin</a>
+	  <a class="navbar-brand" href="#">Four Seasons</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
+		  <li class="nav-item">
+			<a class="nav-link" href="#">Home</a>
+		  </li>
 		  <li class="nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">Room Details</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">Employee Details</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">Client Details</a>
+			<a class="nav-link" href="#">Find Us</a>
 		  </li>
 		</ul>
 	  </div>
 	</nav>
 	
-	<img src="images/1.jpg" class="img-fluid" alt="Responsive image">
-	
 	<br><br>
-	
-	
-	<div class="card-group">
-	  <div class="card">
-		<img class="card-img-top" src="images/roomavailable.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Roooms available today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/roombooked.jpg" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of rooms booked today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/userIcon.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of customers</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/employee.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of employees</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
+	<div style="text-align:center;">
+	<address>
+		Four Seasons, Inc.<br>
+		3 Matthew Ave<br>
+		Kendall Park, South Brunswick<br>
+		New Jersey, 08824<br>
+	</address>
 	</div>
-	<br>
 	<footer>
 	  <p>Five Seasons<br>
 	  Contact Us at +17323542443</p>
