--- a/customerDashboard.html
+++ b/customerDashboard.html
@@ -22,64 +22,75 @@
     
 	
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Four Seasons Admin</a>
+	  <a class="navbar-brand" href="#">Four Seasons</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
+		  <li class="nav-item">
+			<a class="nav-link" href="#">Home</a>
+		  </li>
 		  <li class="nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">Room Details</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">Employee Details</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">Client Details</a>
+			<a class="nav-link" href="#">Find Us</a>
 		  </li>
 		</ul>
 	  </div>
 	</nav>
 	
-	<img src="images/1.jpg" class="img-fluid" alt="Responsive image">
-	
 	<br><br>
 	
-	
-	<div class="card-group">
-	  <div class="card">
-		<img class="card-img-top" src="images/roomavailable.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Roooms available today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner">
+		<div class="carousel-item active">
+		  <img class="d-block w-100" src="images/1.jpg" alt="First slide">
+		</div>
+		<div class="carousel-item">
+		  <img class="d-block w-100" src="images/2.jpg" alt="Second slide">
+		</div>
+		<div class="carousel-item">
+		  <img class="d-block w-100" src="images/5.jpg" alt="Third slide">
 		</div>
 	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/roombooked.jpg" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of rooms booked today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/userIcon.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of customers</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/employee.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of employees</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	  </a>
 	</div>
-	<br>
+	<br><br>
+	<!-- room details table-->
+	
+	<table class="table">
+	  <thead>
+		<tr>
+		  <th scope="col">Room Number</th>
+		  <th scope="col">Price</th>
+		  <th scope="col">Book Date From</th>
+		  <th scope="col">Book Date To</th>
+		  <th scope="col">Image</th>
+		  <th scope="col"></th>
+		</tr>
+	  </thead>
+	  <tbody>
+		<tr>
+		  <th scope="row">1</th>
+		  <td>2000</td>
+		  <td><img style="width:250px;" src="images/3.jpg" alt="Hotel Room"></td>
+		  <form>
+		  <td><input type="date" class="form-control" id="dateS" aria-describedby="emailHelp"></td>
+		  <td><input type="date" class="form-control" id="dateE" aria-describedby="emailHelp"></td>
+		  <td><button type="submit" class="btn btn-primary">Book Now</button></td>
+		  </form>
+		  
+		</tr>
+		
+		
+	  </tbody>
+	</table>
 	<footer>
 	  <p>Five Seasons<br>
 	  Contact Us at +17323542443</p>
