--- a/employeesAdmin.html
+++ b/employeesAdmin.html
@@ -28,13 +28,13 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		  <li class="nav-item">
+			<a class="nav-link" href="#">Home</a>
 		  </li>
 		  <li class="nav-item">
 			<a class="nav-link" href="#">Room Details</a>
 		  </li>
-		  <li class="nav-item">
+		  <li class="nav-item active">
 			<a class="nav-link" href="#">Employee Details</a>
 		  </li>
 		  <li class="nav-item">
@@ -44,41 +44,64 @@
 	  </div>
 	</nav>
 	
-	<img src="images/1.jpg" class="img-fluid" alt="Responsive image">
+	<!-- add employee form -->
+	
+	<form style="width:30%; text-align:center;">
+	  <div class="form-group">
+		<label for="addName">Name</label>
+		<input type="text" class="form-control" id="addName" aria-describedby="emailHelp" placeholder="Enter Name">
+	  </div>
+	  <div class="form-group">
+		<label for="addEmail">Email</label>
+		<input type="email" class="form-control" id="addEmail" placeholder="email">
+	  </div>
+	  <div class="form-group">
+		<label for="addDOB">Date Of Birth</label>
+		<input type="date" class="form-control" id="addDOB" aria-describedby="emailHelp">
+	  </div>
+	  <div class="form-group">
+		<label for="addPassword">Password</label>
+		<input type="password" class="form-control" id="addPassword" aria-describedby="emailHelp">
+	  </div>
+	  <div class="form-group">
+		<label for="addSalary">Salary</label>
+		<input type="number" class="form-control" id="addSalary" aria-describedby="emailHelp" placeholder="Enter Salary">
+	  </div>
+	  <button type="submit" class="btn btn-primary">Add</button>
+	</form>
+	
 	
 	<br><br>
+	<!-- employee details table-->
 	
+	<table class="table">
+	  <thead>
+		<tr>
+		  <th scope="col">Employee ID</th>
+		  <th scope="col">Name</th>
+		  <th scope="col">Email</th>
+		  <th scope="col">Date Of Birth</th>
+		  <th scope="col">Salary</th>
+		</tr>
+	  </thead>
+	  <tbody>
+		<tr>
+		  <th scope="row">1</th>
+		  <td>Sadaaf</td>
+		  <td>c.sadaaf@gmail.com</td>
+		  <td>1997-12-13</td>
+		  <td>6000</td>
+		</tr>
+		<tr>
+		  <th scope="row">2</th>
+		  <td>Jacob</td>
+		  <td>Thornton</td>
+		  <td>@fat</td>
+		</tr>
+		
+	  </tbody>
+	</table>
 	
-	<div class="card-group">
-	  <div class="card">
-		<img class="card-img-top" src="images/roomavailable.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Roooms available today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/roombooked.jpg" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of rooms booked today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/userIcon.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of customers</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/employee.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of employees</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	</div>
 	<br>
 	<footer>
 	  <p>Five Seasons<br>
