--- a/roomDetailsAdmin.html
+++ b/roomDetailsAdmin.html
@@ -28,10 +28,10 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		  </li>
 		  <li class="nav-item">
+			<a class="nav-link" href="#">Home</a>
+		  </li>
+		  <li class="nav-item active">
 			<a class="nav-link" href="#">Room Details</a>
 		  </li>
 		  <li class="nav-item">
@@ -43,43 +43,55 @@
 		</ul>
 	  </div>
 	</nav>
+	<!-- add room form -->
 	
-	<img src="images/1.jpg" class="img-fluid" alt="Responsive image">
+	<form style="width:30%; text-align:center;">
+	  <div class="form-group">
+		<label for="addRoomNo">Room Number</label>
+		<input type="text" class="form-control" id="addRoomNo" aria-describedby="emailHelp" placeholder="Enter Room Number">
+	  </div>
+	  <div class="form-group">
+		<label for="addRoomPrice">Price</label>
+		<input type="number" class="form-control" id="addRoomPrice" placeholder="Price">
+	  </div>
+	  <div class="form-group">
+		<label for="addRoomImage">Add Image</label>
+		<input type="file" class="form-control" id="addRoomImage">
+	  </div>
+	  <button type="submit" class="btn btn-primary">Add</button>
+	</form>
 	
 	<br><br>
 	
+	<!-- room details table-->
 	
-	<div class="card-group">
-	  <div class="card">
-		<img class="card-img-top" src="images/roomavailable.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Roooms available today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/roombooked.jpg" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of rooms booked today:</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/userIcon.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of customers</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	  <div class="card">
-		<img class="card-img-top" src="images/employee.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Number of employees</h5>
-		  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-		</div>
-	  </div>
-	</div>
-	<br>
+	<table class="table">
+	  <thead>
+		<tr>
+		  <th scope="col">Room Number</th>
+		  <th scope="col">Price</th>
+		  <th scope="col">Booked Date Start</th>
+		  <th scope="col">Booked Date End</th>
+		  <th scope="col">Image</th>
+		</tr>
+	  </thead>
+	  <tbody>
+		<tr>
+		  <th scope="row">1</th>
+		  <td>2000</td>
+		  <td></td>
+		  <td></td>
+		  <td><img style="width:250px;" src="images/3.jpg" alt="Hotel Room"></td>
+		</tr>
+		<tr>
+		  <th scope="row">2</th>
+		  <td>Jacob</td>
+		  <td>Thornton</td>
+		  <td>@fat</td>
+		</tr>
+		
+	  </tbody>
+	</table>
 	<footer>
 	  <p>Five Seasons<br>
 	  Contact Us at +17323542443</p>
